spec/error_inferred_string_mismatch.expected
spec/error_inferred_string_mismatch.kex:5:16: error: `greet` expects argument 1 to be String, but got Integer

greet : String -> String
Aborted: fix type errors before running (use --no-check to skip).
