spec/error_inferred_string_mismatch.kex
# Plus with a String literal constrains the other operand to String.
# Passing Integer is caught at compile time without any annotation.
let greet(name) = "Hello, " + name
main do
  IO.printLine(greet(42))
end
